# rust-veteran-app

./: Cargo.toml  README.md  app.yml
creates/lib-auth/: Cargo.toml
creates/lib-core/: Cargo.toml
creates/lib-core/src/: lib.rs
creates/lib-core/src/context/: mod.rs
creates/lib-core/src/error/: mod.rs
creates/lib-core/src/middleware/: check_connection.rs  dynamic.rs  mod.rs
creates/lib-core/src/mongo_config/: mod.rs
creates/lib-core/src/mysql_config/: mod.rs
creates/lib-core/src/server_config/: app_config.rs
creates/lib-entity/: Cargo.toml
creates/lib-entity/src/: lib.rs
creates/lib-entity/src/mongo/: company.rs  device.rs  mod.rs  server_config.rs
creates/lib-entity/src/mysql/: mod.rs
creates/lib-entity/src/state/: mod.rs
creates/lib-rpc/: Cargo.toml
creates/lib-utils/: Cargo.toml
creates/lib-utils/src/: lib.rs
creates/lib-utils/src/http_result/: mod.rs
service/web-server/: Cargo.toml
service/web-server/src/: main.rs
service/web-server/src/config/: mod.rs
service/web-server/src/handlers/: car_record.rs  car_termianl.rs  company_terminal.rs  mod.rs
service/web-server/src/router/: mod.rs
