[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
lib-entity = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }