[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-auth = { workspace = true }
lib-core = { workspace = true }
lib-entity = { workspace = true }
lib-rpc = { workspace = true }
lib-utils = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
urlencoding = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
axum-extra = { workspace = true }
